--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "next-auth": "^4.24.13",
+    "pdfjs-dist": "^4.0.379",
     "pg": "^8.17.1",
     "prisma": "^7.2.0",
     "react": "19.2.3",
